k8s/eventstore/eventstore-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: eventstore-service
  name: eventstore
spec:
  replicas: 3
  selector:
    matchLabels:
      service: eventstore
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        network/eventstore: "true"
        service: eventstore
    spec:
      containers:
        - image: krixlion/eventstore:latest
          name: eventstore
          ports:
            - containerPort: 50011
          # resources: 
          #   requests:
          #     memory: 100
          #     cpu: 100m
          #   limits:
          #     memory: 200
          #     cpu: 200mm
      restartPolicy: Always
