k8s/eventstore/eventstore-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: dev
  name: eventstore-db-service
spec:
  clusterIP: None
  selector:
    service: eventstore-db
  ports:
      - port: 27017
        protocol: TCP
