k8s/eventstore/eventstore-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: dev
  labels:
    service: "eventstore-service"
  name: eventstore-service
spec:
  selector:
    service: eventstore
  ports:
      - port: 50051
